# Quantum-Mech-Solver

./: CMakeLists.txt  README.md
src/: Parser.cpp  Parser.cppm  Parser.hpp  Tokenizer.cpp  Tokenizer.cppm  interpreter.cpp  interpreter.cppm  main.cpp
src/Expressions/: CMakeLists.txt  Expressions.hpp
src/Expressions/include/: Assignment.hpp  Atoms.hpp  BinaryExpression.hpp  BinaryOpStrategy.hpp  CompositeExpressions.hpp  Environment.hpp  ExpressionFactory.hpp  ExpressionType.hpp  Identifier.hpp  Number.hpp  OpStrategy.hpp  Plus.hpp  Token.hpp  UnaryExpression.hpp  UnaryOpStrategy.hpp
src/Expressions/src/: Assignment.cpp  Atoms.cpp  BinaryExpression.cpp  CompositeExpressions.cpp  Environment.cpp  ExpressionFactory.cpp  Identifier.cpp  Number.cpp  Plus.cpp  UnaryExpression.cpp
src/Expressions/src/modules/: Atoms.cppm  CompositeExpressions.cppm  Environment.cppm  Expression.cppm  ExpressionFactory.cppm  Expressions.cppm  Expressions_all.cppm  OpStrategy.cppm  Token.cppm
src/Expressions/src/strategies/: BinaryOperators.cpp  BinaryOperators.hpp  BinaryStrategyFactory.cpp  BinaryStrategyFactory.hpp  OperatorStrategyFactory.cpp  OperatorStrategyFactory.cppm  OperatorStrategyFactory.hpp  Operators.cppm  Plus.cpp  UnaryOperators.cpp  UnaryOperators.hpp
tests/: CMakeLists.txt
tests/ExpressionTests/: CreationTests.cpp  UsageTests.cpp
tests/ExpressionsTest/: CreationTests.cpp  UsageTests.cpp
tests/ParserTests/: tests.cpp
